Setup some og data

--- a/.php_cs.dist
+++ b/.php_cs.dist
@@ -3,6 +3,7 @@
 $finder = PhpCsFixer\Finder::create()
     ->exclude('vendor')
     ->exclude('var')
+    ->in('vendor/disjfa')
     ->in(__DIR__);
 
 return PhpCsFixer\Config::create()
