--- a/composer.json
+++ b/composer.json
@@ -24,9 +24,9 @@
         "php": "^7.2.5",
         "ext-iconv": "*",
         "beberlei/doctrineextensions": "^1.2",
-        "disjfa/glynn-theme-bundle": "^0.4.2",
-        "disjfa/pwa-bundle": "^0.1.0",
-        "disjfa/translation-bundle": "^0.4.0",
+        "disjfa/glynn-theme-bundle": "dev-master",
+        "disjfa/pwa-bundle": "dev-master",
+        "disjfa/translation-bundle": "dev-master",
         "league/fractal": "^0.19.2",
         "ornicar/gravatar-bundle": "^1.2",
         "php-translation/symfony-bundle": "^0.9.1",
