Updated icon, changed facebook login

--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,9 @@
         "disjfa/glynn-theme-bundle": "dev-master",
         "disjfa/pwa-bundle": "dev-master",
         "disjfa/translation-bundle": "dev-master",
+        "knpuniversity/oauth2-client-bundle": "^2.2",
         "league/fractal": "^0.19.2",
+        "league/oauth2-facebook": "^2.0",
         "ornicar/gravatar-bundle": "^1.2",
         "php-translation/symfony-bundle": "^0.9.1",
         "ramsey/uuid-doctrine": "^1.6",
