--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -29,7 +29,9 @@ security:
                 path: app_logout
                 target: home_index
             guard:
+                entry_point: App\Security\LoginAuthenticator
                 authenticators:
+                    - App\Security\Authenticator\FacebookAuthenticator
                     - App\Security\LoginAuthenticator
 
     access_control:
