--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "glynn-admin": "^0.3.1",
     "popper.js": "^1.16.1",
     "ryoko-headers": "^0.1.3",
+    "share-api-polyfill": "^1.0.15",
     "vue": "^2.6.11",
     "vue-loader": "^15.9.3",
     "vue-template-compiler": "^2.6.11"
