--- a/composer.json
+++ b/composer.json
@@ -25,13 +25,13 @@
         "ext-iconv": "*",
         "beberlei/doctrineextensions": "^1.2",
         "disjfa/glynn-theme-bundle": "dev-master",
-        "disjfa/pwa-bundle": "dev-master",
+        "disjfa/pwa-bundle": "^0.1.2",
         "disjfa/translation-bundle": "dev-master",
         "knpuniversity/oauth2-client-bundle": "^2.2",
         "league/fractal": "^0.19.2",
         "league/oauth2-facebook": "^2.0",
         "ornicar/gravatar-bundle": "^1.2",
-        "php-translation/symfony-bundle": "^0.9.1",
+        "php-translation/symfony-bundle": "^0.12.1",
         "ramsey/uuid-doctrine": "^1.6",
         "sensio/framework-extra-bundle": "^5.5",
         "symfony/asset": "^4.4",
