--- a/package.json
+++ b/package.json
@@ -23,24 +23,46 @@
   ],
   "homepage": "https://github.com/disjfa/symfony4-glynn-admin#readme",
   "devDependencies": {
-    "@symfony/webpack-encore": "^0.30.2",
-    "autoprefixer": "^9.8.5",
+    "@symfony/webpack-encore": "^0.31.0",
+    "@vue/compiler-sfc": "^3.0.2",
+    "autoprefixer": "^10.0.2",
     "node-sass": "^4.14.1",
-    "postcss-loader": "^3.0.0",
-    "sass-loader": "^8.0.2",
+    "postcss-loader": "^4.0.4",
+    "sass-loader": "^9.0.3",
+    "webpack-env": "^0.8.0",
     "webpack-notifier": "^1.8.0",
-    "workbox-webpack-plugin": "^5.1.3"
+    "workbox-webpack-plugin": "^5.1.4"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-free": "^5.14.0",
-    "axios": "^0.19.2",
-    "bootstrap": "^4.5.0",
+    "@fortawesome/fontawesome-free": "^5.15.1",
+    "@typescript-eslint/eslint-plugin": "^4.7.0",
+    "@typescript-eslint/parser": "^4.7.0",
+    "@vue/cli-plugin-babel": "^4.5.8",
+    "@vue/cli-plugin-eslint": "^4.5.8",
+    "@vue/cli-plugin-pwa": "^4.5.8",
+    "@vue/cli-plugin-router": "^4.5.8",
+    "@vue/cli-plugin-typescript": "^4.5.8",
+    "@vue/cli-plugin-vuex": "^4.5.8",
+    "@vue/cli-service": "^4.5.8",
+    "@vue/eslint-config-airbnb": "^5.1.0",
+    "@vue/eslint-config-typescript": "^7.0.0",
+    "axios": "^0.21.0",
+    "bootstrap": "^4.5.3",
+    "core-js": "^3.7.0",
+    "eslint": "^7.13.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-vue": "^7.1.0",
     "glynn-admin": "^0.3.1",
     "popper.js": "^1.16.1",
     "ryoko-headers": "^0.1.3",
-    "share-api-polyfill": "^1.0.15",
-    "vue": "^2.6.11",
-    "vue-loader": "^15.9.3",
-    "vue-template-compiler": "^2.6.11"
+    "share-api-polyfill": "^1.0.20",
+    "ts-loader": "^5.4.5",
+    "typescript": "^4.0.5",
+    "vue": "^3.0.2",
+    "vue-loader": "^16.0.0-rc.1",
+    "vue-router": "^4.0.0-rc.2",
+    "vue-template-compiler": "^2.6.12",
+    "vuex": "^4.0.0-rc.1",
+    "youtube-player": "^5.5.2"
   }
 }
