--- a/.env.example
+++ b/.env.example
@@ -16,3 +16,6 @@ APP_SECRET=c521836f284db28ed3658c4fb405ce82
 DATABASE_URL=sqlite:///%kernel.project_dir%/var/data.db
 ###< doctrine/doctrine-bundle ###
 PWA_PUBLIC_PATH=/public
+
+OAUTH_FACEBOOK_ID=
+OAUTH_FACEBOOK_SECRET=
