--- a/composer.json
+++ b/composer.json
@@ -21,43 +21,44 @@
         }
     ],
     "require": {
-        "php": "^7.2.5",
+        "php": "^8.1",
         "ext-iconv": "*",
         "beberlei/doctrineextensions": "^1.2",
-        "disjfa/glynn-theme-bundle": "dev-master",
-        "disjfa/pwa-bundle": "^0.1.2",
-        "disjfa/translation-bundle": "dev-master",
+        "composer/package-versions-deprecated": "1.11.99.5",
+        "doctrine/doctrine-bundle": "^2",
+        "doctrine/doctrine-migrations-bundle": "^3",
+        "doctrine/orm": "^2",
+        "knplabs/knp-paginator-bundle": "^6.2",
         "knpuniversity/oauth2-client-bundle": "^2.2",
         "league/fractal": "^0.19.2",
         "league/oauth2-facebook": "^2.0",
-        "ornicar/gravatar-bundle": "^1.2",
         "php-translation/symfony-bundle": "^0.12.1",
         "ramsey/uuid-doctrine": "^1.6",
-        "sensio/framework-extra-bundle": "^5.5",
-        "symfony/asset": "^4.4",
-        "symfony/console": "^4.4",
-        "symfony/dotenv": "^4.4",
-        "symfony/flex": "^1.1",
-        "symfony/framework-bundle": "^4.4",
-        "symfony/orm-pack": "^1.0",
-        "symfony/security-bundle": "^4.4",
-        "symfony/templating": "^4.4",
-        "symfony/twig-bundle": "^4.4",
-        "symfony/var-dumper": "^4.4",
-        "symfony/yaml": "4.4.*"
+        "symfony/asset": "^6.3",
+        "symfony/console": "^6.3",
+        "symfony/dotenv": "^6.3",
+        "symfony/flex": "^2.4",
+        "symfony/framework-bundle": "^6.3",
+        "symfony/security-bundle": "^6.3",
+        "symfony/templating": "^6.3",
+        "symfony/twig-bundle": "^6.3",
+        "symfony/var-dumper": "^6.3",
+        "symfony/yaml": "^6.3"
     },
     "require-dev": {
         "doctrine/doctrine-fixtures-bundle": "^3.3",
-        "friendsofphp/php-cs-fixer": "^2.12",
+        "friendsofphp/php-cs-fixer": "^3",
         "symfony/maker-bundle": "^1.14",
-        "symfony/profiler-pack": "^1.0",
-        "symfony/thanks": "^1.1"
+        "symfony/stopwatch": "^6.3",
+        "symfony/thanks": "^1.1",
+        "symfony/web-profiler-bundle": "^6.3"
     },
     "config": {
-        "preferred-install": {
-            "*": "dist"
-        },
-        "sort-packages": true
+        "sort-packages": true,
+        "allow-plugins": {
+            "symfony/flex": true,
+            "symfony/thanks": true
+        }
     },
     "autoload": {
         "psr-4": {
@@ -100,7 +101,7 @@
     "extra": {
         "symfony": {
             "allow-contrib": false,
-            "require": "4.4.*"
+            "require": "6.3.*"
         }
     }
 }
