--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -1,7 +1,6 @@
 security:
-    encoders:
-        App\Entity\User:
-            algorithm: auto
+    password_hashers:
+        Symfony\Component\Security\Core\User\PasswordAuthenticatedUserInterface: 'auto'
 
     role_hierarchy:
         ROLE_ADMIN:       ROLE_USER
@@ -18,21 +17,13 @@ security:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
         main:
-            pattern: ^/
-            anonymous: true
-            form_login:
-                check_path: app_login
-                login_path: app_login
-                csrf_token_generator: security.csrf.token_manager
-                default_target_path: home_index
+            lazy: true
+            provider: app_user_provider
+            login_link:
+                check_route: login_check
+                signature_properties: [ 'id' ]
             logout:
                 path: app_logout
-                target: home_index
-            guard:
-                entry_point: App\Security\LoginAuthenticator
-                authenticators:
-                    - App\Security\Authenticator\FacebookAuthenticator
-                    - App\Security\LoginAuthenticator
 
     access_control:
         - { path: ^/login$, role: IS_AUTHENTICATED_ANONYMOUSLY }
