Setup basic login link

--- a/composer.json
+++ b/composer.json
@@ -25,6 +25,10 @@
         "ext-iconv": "*",
         "beberlei/doctrineextensions": "^1.2",
         "composer/package-versions-deprecated": "1.11.99.5",
+        "disjfa/glynn-theme-bundle": "dev-master",
+        "disjfa/menu-bundle": "dev-master",
+        "disjfa/pwa-bundle": "dev-master",
+        "disjfa/translation-bundle": "dev-master",
         "doctrine/doctrine-bundle": "^2",
         "doctrine/doctrine-migrations-bundle": "^3",
         "doctrine/orm": "^2",
