--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -20,13 +20,11 @@ security:
             lazy: true
             provider: app_user_provider
             login_link:
-                check_route: login_check
+                check_route: app_login_check
                 signature_properties: [ 'id' ]
             logout:
                 path: app_logout
 
     access_control:
-        - { path: ^/login$, role: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: ^/register, role: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: ^/resetting, role: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/login$, role: PUBLIC_ACCESS }
         - { path: ^/admin/, role: ROLE_ADMIN }
