--- a/config/services.yaml
+++ b/config/services.yaml
@@ -24,5 +24,9 @@ services:
         resource: '../src/Controller'
         tags: ['controller.service_arguments']
 
+    App\Command\UserGenerateLoginLinkCommand:
+        arguments:
+            $loginLinkHandler: '@security.authenticator.login_link_handler.main'
+
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
