Updated packages, removed dev

--- a/composer.json
+++ b/composer.json
@@ -25,17 +25,17 @@
         "ext-iconv": "*",
         "beberlei/doctrineextensions": "^1.2",
         "composer/package-versions-deprecated": "1.11.99.5",
-        "disjfa/glynn-theme-bundle": "dev-master",
-        "disjfa/menu-bundle": "dev-master",
-        "disjfa/pwa-bundle": "dev-master",
-        "disjfa/translation-bundle": "dev-master",
+        "disjfa/glynn-theme-bundle": "^0.5.0",
+        "disjfa/menu-bundle": "^0.4.0",
+        "disjfa/pwa-bundle": "^0.2.0",
+        "disjfa/translation-bundle": "^0.5.0",
         "doctrine/doctrine-bundle": "^2",
         "doctrine/doctrine-migrations-bundle": "^3",
         "doctrine/orm": "^2",
+        "egulias/email-validator": "^4.0",
         "knplabs/knp-paginator-bundle": "^6.2",
-        "knpuniversity/oauth2-client-bundle": "^2.2",
         "league/fractal": "^0.19.2",
-        "league/oauth2-facebook": "^2.0",
+        "nyholm/psr7": "^1.8",
         "php-translation/symfony-bundle": "^0.12.1",
         "ramsey/uuid-doctrine": "^1.6",
         "symfony/asset": "^6.3",
@@ -43,13 +43,22 @@
         "symfony/dotenv": "^6.3",
         "symfony/flex": "^2.4",
         "symfony/framework-bundle": "^6.3",
+        "symfony/http-client": "6.3.*",
+        "symfony/mailer": "6.3.*",
+        "symfony/notifier": "6.3.*",
         "symfony/security-bundle": "^6.3",
+        "symfony/sendinblue-mailer": "6.3.*",
         "symfony/templating": "^6.3",
         "symfony/twig-bundle": "^6.3",
         "symfony/var-dumper": "^6.3",
-        "symfony/yaml": "^6.3"
+        "symfony/yaml": "^6.3",
+        "twig/cssinliner-extra": "^3.7",
+        "twig/extra-bundle": "^2.12|^3.0",
+        "twig/inky-extra": "^3.7",
+        "twig/twig": "^2.12|^3.0"
     },
     "require-dev": {
+        "deployer/deployer": "^7.3",
         "doctrine/doctrine-fixtures-bundle": "^3.3",
         "friendsofphp/php-cs-fixer": "^3",
         "symfony/maker-bundle": "^1.14",
