--- a/config/packages/disjfa_pwa.yaml
+++ b/config/packages/disjfa_pwa.yaml
@@ -1,3 +1,13 @@
+parameters:
+    disjfa_pwa.favicon: /pwa-icon.png
+    disjfa_pwa.background_color: '#000000'
+    disjfa_pwa.theme_color: '#ecf0f1'
+    disjfa_pwa.name: 'SAH'
+    disjfa_pwa.short_name: 'SAH'
+    disjfa_pwa.start_url: '/?start'
+    disjfa_pwa.display: 'standalone'
+
+
 liip_imagine:
     filter_sets:
         pwa_16x16:
